1998-08-26  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): Use `AC_MSG_WARN'
	if LibGTop cannot be found and the `fail' argument is not given.

1998-08-24  Martin Baulig  <martin@home-of-linux.org>

	* gnome-support.m4 (GCC_NEED_DECLARATIONS): Added `setreuid',
	`setregid' and `getpagesize'.
	(AC_TYPE_UID_T): New check.

1998-08-24  Christopher Blizzard  <blizzard@appliedtheory.com>

	* Makefile.am (MACROS): Add gnome-ghttp-check.m4 to the Makefile.

1998-08-23  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): You can give
	this macro two parameters: the required version number and
	an optional `fail' argument to make it fail if LibGTop is
	not found.

1998-08-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-guile-checks.m4: Added check for `-lnsl' and `-lsocket'
	if `build-guile' cannot be found.

1998-08-20  Raja R Harinath  <harinath@cs.umn.edu>

	* compiler-flags.m4: New file.  Defines the
	GNOME_COMPILER_WARNINGS macro.
	* autogen.sh (conf_flags): Add `--enable-compile-warnings' to list
	of flags passed to `configure'.
	* Makefile.am (MACROS): Add compiler-flags.m4.

1998-08-18  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: make it require libgtop >= 0.25.0.
	Added (AC_SUBST): `LIBGTOP_MICRO_VERSION' and `LIBGTOP_EXTRA_LIBS'.
	
1998-08-17  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Completely rewrote this file. It
	uses now the `libgtop-config' script and also checks for
	correct libgtop version.

1998-08-06  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Added `freebsd' directory.

1998-08-04  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-x-checks.m4: Define USE_DEVGTK unconditionally to `true'.

1998-08-04  Stuart Parmenter  <pavlov@innerx.net>

	* gnome-x-checks.m4: (AM_PATH_GTK) make it require GTK >= 1.1.1
	dnl'd the dev_gtk since they will have to anyways.
