@@ -1,5 +1,8 @@
 1998-08-26  Martin Baulig  <martin@home-of-linux.org>
 
+	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): Make it work
+	with a brain-dead /bin/sh and a brain-dead /bin/test.
+	
 	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): Use `AC_MSG_WARN'
 	if LibGTop cannot be found and the `fail' argument is not given.
 
